--- a/css/style.css
+++ b/css/style.css
@@ -14,27 +14,33 @@ header{
     background-color: #f5f5f5;
 }
 
-.container > img{
+header img{
     margin-top: 12px;
 
 }
 
 .container{
-    width: 1200px;
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
 }
 
 article{
-    border: 1px solid #a8a8a8;
-    width: 350px;
     padding: 10px;
-    float: left;
-    margin: 20px;
+    border: 1px solid #a8a8a8;
+    margin-bottom: 5%;
 }
 
-.titulo{
+@media (min-width: 800px) {
+    article{
+        width: 30%;
+        float: left;
+        margin-right: 5%;
+    }
+}
+
+article > h2{
     background-color: #A8A8A8FF;
     color: whitesmoke;
     text-align: center;
@@ -54,7 +60,7 @@ article{
     font-size: 25px;
 }
 
-.lista{
+article > ul{
     list-style: none;
     margin: 20px 0;
     padding: 0;
