--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,7 @@
+html{
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+}
 * {
     box-sizing: border-box;
 }
@@ -6,5 +10,5 @@ body{
     margin: 0;
 
     font-family: Arial, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
 }
