--- a/css/componentes.css
+++ b/css/componentes.css
@@ -3,6 +3,7 @@
     border: 1px solid #a8a8a8;
     margin-bottom: 5%;
 
+    font-size: 1.6rem;
     text-align: center;
     line-height: 25px;
 }
@@ -18,13 +19,13 @@
     margin-bottom: 0;
 
     font-weight: normal;
-    font-size: 28px;
+    font-size: 1.75em;
 }
 
 .plano__preco{
     margin: 20px 0;
 
-    font-size: 25px;
+    font-size: 1.5em;
 }
 
 .planos__caracteristicas{
@@ -48,7 +49,6 @@
 }
 
 .button:hover, .button:focus{
-    background-color: #07497a;
     text-decoration: none;
     color: whitesmoke;
 }
@@ -61,4 +61,78 @@
 .button--sign:hover, .button--sign:focus{
     background-color: #07497a;
 
+}
+.button--prin{
+    border: 1px solid #085A97;
+
+    background-color: #085A97;
+}
+
+.button--prin:hover, .button--prin:focus{
+    background-color: #07497a;
+}
+.chamada{
+    font-size: 1.6rem;
+    text-align: center;
+}
+
+.chamada__titulo{
+    margin: 0;
+
+    color: white;
+    font-size: 3.375em;
+    text-shadow: 1px 1px #313131;
+
+    line-height: 0.9;
+}
+
+.chamada__subtitulo{
+    margin: 60px 0;
+
+    color: white;
+
+    font-size: 1.2em;
+}
+
+.depoimento{
+    font-size: 2.2rem;
+}
+
+.depoimento > blockquote{
+    margin: 0;
+    padding: 0 60px;
+
+    text-align: center;
+    font-size: 1em;
+}
+
+.depoimento__autor{
+    margin-top: 40px;
+
+    text-align: center;
+    font-size: 0.9em;
+}
+
+.depoimento__autor > img{
+    border-radius: 50%;
+}
+
+.depoimento__autor > p{
+    margin-top: 10px;
+}
+
+@media (min-width: 992px) {
+    .chamada{
+        padding-left: 10%;
+        padding-right: 10%;
+
+        font-size: 2.2rem;
+    }
+
+    .depoimento{
+        padding-left: 15%;
+        padding-right: 15%;
+
+        font-size: 2.8rem;
+    }
 }
