--- a/css/componentes.css
+++ b/css/componentes.css
@@ -307,6 +307,15 @@
         padding: 0 10px;
 
     }
+}
 
+.titulo--formulario{
+    margin: 0;
+    margin-bottom: 40px;
 
+    border-bottom: 1px solid #A8A8A8FF;
+
+    font-size: 2.6rem;
+    font-weight: normal;
+    color: #085A97;
 }
