--- a/css/componentes.css
+++ b/css/componentes.css
@@ -316,6 +316,30 @@
     border-bottom: 1px solid #A8A8A8FF;
 
     font-size: 2.6rem;
-    font-weight: normal;
+    font-weight: bold;
     color: #085A97;
 }
+.grupo-entrada{
+    margin-bottom: 15px;
+}
+
+.grupo-entrada > label{
+    display: block;
+
+    font-weight: bold;
+}
+
+.campo{
+    display: block;
+    width: 100%;
+    height: 2.8em;
+
+    padding: 5px;
+    border: 1px solid #A8A8A8FF;
+    border-radius: 5px;
+
+    background-color: white;
+
+    font-size: 1.4rem;
+}
+
