--- a/css/layout.css
+++ b/css/layout.css
@@ -47,3 +47,13 @@
     padding: 40px 0;
     margin-top: 60px;
 }
+
+.layout-login{
+    text-align: center;
+    padding: 40px 0;
+}
+
+
+.aaaa{
+    background-color: #1c86d5;
+}
