--- a/css/componentes.css
+++ b/css/componentes.css
@@ -343,3 +343,110 @@
     font-size: 1.4rem;
 }
 
+.login__info{
+    padding: 20px;
+}
+.login__info__titulo{
+    color: #085A97;
+    font-size: 2.8rem;
+}
+
+.login__info__registrar{
+    text-align: left;
+
+    padding: 25px 0;
+
+}
+
+.campo-login{
+    width: 100%;
+    height: 2.8em;
+
+    margin-bottom: 15px;
+
+    padding: 30px 10px;
+    border: 1px solid #A8A8A8FF;
+    border-radius: 10px;
+
+    background-color: white;
+
+    font-size: 1.4rem;
+}
+
+.button--login{
+    width: 100%;
+
+    padding: 15px;
+}
+
+.login-lembrar{
+    text-align: left;
+}
+
+.login-lembrar__checkbox {
+    display: block;
+    position: relative;
+
+    padding-left: 30px;
+    margin-bottom: 12px;
+
+
+    font-size: 0.9em;
+    color: #808080;
+
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.login-lembrar__checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: white;
+    border-radius: 3px;
+    border: 1px solid #085A97;
+}
+
+/* When the checkbox is checked, add a blue background */
+.login-lembrar__checkbox input:checked ~ .checkmark {
+    background-color: #085A97;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.login-lembrar__checkbox input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.login-lembrar__checkbox .checkmark:after {
+    left: 7px;
+    top: 3px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
